--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "flask>=3.1.0",
     "flask-flatpages>=0.8.3",
     "frozen-flask>=1.0.2",
+    "gunicorn>=23.0.0",
     "markdown>=3.7",
     "pygments>=2.18.0",
     "pyyaml>=6.0.2",
